--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -15,16 +15,16 @@ jobs:
     - name: Fazer checkout do repositório
       uses: actions/checkout@v2
     
-    - name: Executar um script
-      run: echo "Este é um script personalizado executando após um push ou a cada hora"
-
-    - name: Configurar Node.js
-      uses: actions/setup-node@v2
+    - name: Configurar .NET
+      uses: actions/setup-dotnet@v2
       with:
-        node-version: '14'
-
-    - name: Instalar dependências
-      run: npm install
-
+        dotnet-version: '6.0.x' # Altere para a versão do .NET que você está usando
+    
+    - name: Restaurar dependências
+      run: dotnet restore
+    
+    - name: Compilar o projeto
+      run: dotnet build --configuration Release --no-restore
+    
     - name: Executar testes
-      run: npm test
+      run: dotnet test --no-restore --verbosity normal
