--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -22,9 +22,12 @@ jobs:
     
     - name: Restaurar dependências
       run: dotnet restore
-    
+
+    - name: Verificar estrutura de diretórios
+      run: ls -R
+
     - name: Compilar o projeto
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build --configuration Release --no-restore --verbosity minimal
     
     - name: Executar testes
       run: dotnet test --no-restore --verbosity normal
