--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -1,33 +1,33 @@
-name: Workflow CI
+name: CI Workflow
 
 on:
   push:
     branches:
       - main
   schedule:
-    - cron: '0 * * * *' # Executa a cada hora
+    - cron: '0 * * * *' # Run every hour
 
 jobs:
   build:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Fazer checkout do repositório
+    - name: Checkout source code
       uses: actions/checkout@v2
-    
-    - name: Configurar .NET
+
+    - name: Set up .NET SDK
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: '6.0.x' # Altere para a versão do .NET que você está usando
+        dotnet-version: '6.0.x' # Replace with the .NET version you're using
     
-    - name: Restaurar dependências
+    - name: Restore dependencies
       run: dotnet restore
 
-    - name: Verificar estrutura de diretórios
-      run: ls -R
+    - name: Build and publish
+      run: dotnet publish -c Release -o ./publish
 
-    - name: Compilar o projeto
-      run: dotnet build --configuration Release --no-restore --verbosity minimal
-    
-    - name: Executar testes
-      run: dotnet test --no-restore --verbosity normal
+    - name: Run tests
+      run: dotnet test --verbosity normal
+
+    - name: Clean up artifacts
+      run: rm -rf ./publish
