--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up .NET SDK
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: '6.0.x' # Replace with the .NET version you're using
+        dotnet-version: '6.0.x' # Ensure this version supports .NET 8.0, e.g., '6.0.101'
     
     - name: Restore dependencies
       run: dotnet restore
