--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -1,33 +1,19 @@
-name: CI Workflow
+name: Continuos Integration
 
-on:
-  push:
-    branches:
-      - main
-  schedule:
-    - cron: '0 * * * *' # Run every hour
+on: pull_request
 
 jobs:
-  build:
+  continuos-integration:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout source code
-      uses: actions/checkout@v2
-
-    - name: Set up .NET SDK
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: '6.0.x' # Ensure this version supports .NET 8.0, e.g., '6.0.101'
-    
-    - name: Restore dependencies
-      run: dotnet restore
-
-    - name: Build and publish
-      run: dotnet publish -c Release -o ./publish
-
-    - name: Run tests
-      run: dotnet test --verbosity normal
-
-    - name: Clean up artifacts
-      run: rm -rf ./publish
+      - uses: actions/checkout@v3
+      - name: Using Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.
+      - name: run install, build and test
+        run: |
+          npm install
+          npm run build 
+          npm run test
